# rUGP-Fuck

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hook.cpp  hook.h  plugin.cpp  plugin.h  proxy.h  repair.cpp  repair.h  rugp.cpp  rugp.h  rugp7.cpp  rugp7.h  vcpkg.json
.github/workflows/: cmake.yml
Include/: stdafx.h
Lib/: cjson.lib  detours.lib
